added a add-card and add-card-form page

--- a/add-card.html
+++ b/add-card.html
@@ -41,30 +41,13 @@
             </div>
         </div>
     </div>
-    <div class="col-md-5 mx-auto mt-4 pb-5 px-3">
-        <div class="text-center">
-            <h5>Withdraw</h5>
-            <p>You can withdraw by chosing an option</p>
-        </div>
-        <div class="row">
-            <!-- <div class="col-4">
-                <a href="agent.html" class="widthraw-box">
-                    <img src="img/businessman.png" class="img-fluid" alt="">
-                    <h6>Agent</h6>
-                </a>
-            </div> -->
-            <div class="col-4">
-                <a href="add-bank.html" class="widthraw-box">
-                    <img src="img/bank.png" class="img-fluid" alt="">
-                    <h6>Bank</h6>
-                </a>
+    <div class="mt-4 pb-5 px-3">
+        <div class="add-bank text-center p-4">
+            <h1>Withdraw</h1>
+            <div class="my-4">
+                <img src="img/credit.png" class="img-fluid w-50" alt="">
             </div>
-            <div class="col-4">
-                <a href="add-card.html" class="widthraw-box">
-                    <img src="img/credit.png" class="img-fluid" alt="">
-                    <h6>Card</h6>
-                </a>
-            </div>
+            <a href="add-card-form.html"> Add a Card </a>
         </div>
     </div>
     <div class="footer-menu ">
@@ -92,26 +75,6 @@
 
 
 
-    <div class="modal fade" id="add_msg" tabindex="-1" aria-labelledby="add_msgLabel" style="display: none;"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="mb-3">
-                        <label for="meassage" class="form-label">Add Meassage</label>
-                        <textarea class="form-control" id="meassage" rows="4"></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer flex-nowrap">
-                    <button type="button" class="close-btn" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="cont-btn">Add Meassage</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <script src="js/bootstrap.bundle.min.js"></script>
 
