added a fund account page

--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="card-btns mt-4">
-                <a href="">Fund Account</a>
+                <a href="fund-account.html">Fund Account</a>
                 <a href="">Transaction History</a>
             </div>
         </div>
