added agent2 page

--- a/fund-account.html
+++ b/fund-account.html
@@ -48,7 +48,7 @@
         </div>
         <div class="row">
             <div class="col-4">
-                <a href="agent.html" class="widthraw-box">
+                <a href="agent-2.html" class="widthraw-box">
                     <img src="img/businessman.png" class="img-fluid" alt="">
                     <h6>Agent</h6>
                 </a>
